update loading screen

--- a/src/components/LoadingScreen/loading.module.scss
+++ b/src/components/LoadingScreen/loading.module.scss
@@ -13,7 +13,9 @@
   align-items: center;
   justify-content: center;
 
-  svg {
-    overflow: visible;
+  .logo {
+    svg {
+      overflow: visible;
+    }
   }
 }
