setup layout samma

--- a/src/sections/Menu/menu.module.scss
+++ b/src/sections/Menu/menu.module.scss
@@ -4,6 +4,145 @@
   display: flex;
   flex-direction: column;
 
+  .imgList {
+    picture {
+      display: block;
+      position: relative;
+      height: auto;
+      z-index: 1;
+      overflow: hidden;
+      background: var(--orange-cl);
+      padding-bottom: 100%;
+
+      img {
+        position: absolute;
+        top: 0;
+        left: 0;
+      }
+    }
+
+    .step1 {
+      div {
+        &:nth-of-type(1) {
+          position: absolute;
+          bottom: 105px;
+          left: 40px;
+          z-index: 1;
+          width: max(170px, 11.806vw);
+
+          picture {
+            padding-bottom: calc(228 / 170 * 100%);
+          }
+        }
+
+        &:nth-of-type(2) {
+          position: absolute;
+          top: 0;
+          left: 29.678%;
+          z-index: 1;
+          width: max(361.26px, 25.088vw);
+
+          picture {
+            padding-bottom: calc(541.95 / 361.26 * 100%);
+          }
+        }
+
+        &:nth-of-type(3) {
+          position: absolute;
+          bottom: 40px;
+          right: 40px;
+          z-index: 1;
+          width: max(248px, 17.222vw);
+
+          picture {
+            padding-bottom: calc(328 / 248 * 100%);
+          }
+        }
+      }
+    }
+
+    .step2 {
+      div {
+        &:nth-of-type(1) {
+          position: absolute;
+          top: 164px;
+          left: 184px;
+          z-index: 2;
+          width: max(295px, 20.486vw);
+
+          picture {
+            padding-bottom: calc(197 / 295 * 100%);
+          }
+        }
+
+        &:nth-of-type(2) {
+          position: absolute;
+          bottom: 0;
+          left: 52.708%;
+          z-index: 2;
+          width: max(154px, 10.694vw);
+
+          picture {
+            padding-bottom: calc(209 / 154 * 100%);
+          }
+        }
+
+        &:nth-of-type(3) {
+          position: absolute;
+          top: 40px;
+          right: 156px;
+          z-index: 2;
+          width: max(186px, 12.917vw);
+
+          picture {
+            padding-bottom: calc(241 / 186 * 100%);
+          }
+        }
+      }
+    }
+
+    .step3 {
+      div {
+        &:nth-of-type(1) {
+          position: absolute;
+          top: 40px;
+          left: 80px;
+          z-index: 3;
+          width: max(168px, 11.667vw);
+
+          picture {
+            padding-bottom: calc(221 / 168 * 100%);
+          }
+        }
+
+        &:nth-of-type(2) {
+          position: absolute;
+          bottom: 0;
+          left: 20.486%;
+          z-index: 3;
+          width: max(286px, 19.861vw);
+
+          picture {
+            padding-bottom: calc(381 / 286 * 100%);
+          }
+        }
+
+        &:nth-of-type(3) {
+          position: absolute;
+          top: 50%;
+          right: 15.833%;
+          z-index: 3;
+          width: max(326px, 22.639vw);
+          transform: translateY(-50%);
+
+          picture {
+            padding-bottom: calc(431 / 326 * 100%);
+          }
+        }
+      }
+    }
+  }
+
   .center {
     position: absolute;
     top: 0;
@@ -13,6 +152,8 @@
     display: flex;
     align-items: center;
     justify-content: center;
+    z-index: 5;
+    pointer-events: none;
   }
 
   .marqueeWrapper {
@@ -32,11 +173,6 @@
     flex-direction: column;
     gap: 35px;
     position: relative;
-  }
-
-  .marqueeContent {
-    display: flex;
-    flex-direction: column;
 
     p {
       font-family: var(--swiss-fonts);
@@ -48,6 +184,11 @@
       text-rendering: optimizeLegibility;
       transform: translateZ(0);
     }
+  }
+
+  .marqueeContent {
+    display: flex;
+    flex-direction: column;
   }
 
   .bottom {
