--- a/src/components/Header/header.module.scss
+++ b/src/components/Header/header.module.scss
@@ -19,6 +19,10 @@
       font-weight: 500;
       writing-mode: vertical-lr;
     }
+
+    @include maxW {
+      position: fixed;
+    }
   }
 
   .logo {
