--- a/src/components/LoadingScreen/loading.module.scss
+++ b/src/components/LoadingScreen/loading.module.scss
@@ -4,8 +4,10 @@
   position: fixed;
   top: 0;
   left: 0;
+  right: 0;
+  bottom: 0;
   width: 100vw;
-  height: 100vh;
+  // height: 100vh;
   background: var(--main-bg-cl);
   z-index: 1000;
 
@@ -15,7 +17,15 @@
 
   .logo {
     svg {
+      width: 100%;
+      margin: 0 auto;
       overflow: visible;
+    }
+
+    @include maxW {
+      svg {
+        width: 80% !important;
+      }
     }
   }
 }
