--- a/src/sections/Hero/hero.module.scss
+++ b/src/sections/Hero/hero.module.scss
@@ -15,6 +15,14 @@
       width: 100%;
       height: 100%;
     }
+
+    @include maxW {
+      width: 188%;
+      height: auto;
+      top: 50%;
+      left: 50%;
+      transform: translate(-50%, -52%);
+    }
   }
 
   .bottom {
@@ -22,16 +30,46 @@
     bottom: 32px;
     left: 36px;
     z-index: 1;
+    text-align: left;
 
     .icon {
       display: flex;
       font-size: 2rem;
       line-height: 1.35;
       margin-bottom: 17px;
+
+      p {
+        &:nth-of-type(1) {
+          margin-right: 6px;
+        }
+
+        &:nth-of-type(2) {
+          margin-right: 3px;
+        }
+
+        &:nth-of-type(3) {
+          margin-right: 4px;
+        }
+      }
     }
 
     .address {
-      margin-left: 4px;
+      // margin-left: 4px;
+      margin-left: 0;
+    }
+
+    @include maxW {
+      bottom: 18px;
+      left: 21px;
+
+      .icon {
+        font-size: 1.6rem;
+        margin-bottom: 10px;
+      }
+
+      .address {
+        // margin-left: 1px;
+      }
     }
   }
 }
