--- a/src/sections/Menu/menu.module.scss
+++ b/src/sections/Menu/menu.module.scss
@@ -62,6 +62,50 @@
         @include image-position(326, 22.639, 431, 326, 3, $top: 50%, $right: 15.833%, $transform: translateY(-50%));
       }
     }
+
+    @include maxW {
+      .step1 {
+        div:nth-of-type(1) {
+          @include image-position(102, 24.638, 137, 102, 1, $bottom: 35px, $right: 22px);
+        }
+
+        div:nth-of-type(2) {
+          @include image-position(176, 42.512, 264.53, 176, 1, $top: 0, $right: 74px);
+        }
+
+        div:nth-of-type(3) {
+          @include image-position(123, 29.71, 163, 123, 1, $bottom: 169px, $left: 0);
+        }
+      }
+
+      .step2 {
+        div:nth-of-type(1) {
+          @include image-position(157, 37.923, 105, 157, 2, $top: 52%, $right: 0, $transform: translateY(-50%));
+        }
+
+        div:nth-of-type(2) {
+          @include image-position(150, 36.232, 203, 150, 2, $bottom: 0, $left: 81px);
+        }
+
+        div:nth-of-type(3) {
+          @include image-position(167, 40.338, 215, 167, 2, $top: 73px, $left: 15px);
+        }
+      }
+
+      .step3 {
+        div:nth-of-type(1) {
+          @include image-position(157, 37.923, 206, 157, 3, $bottom: 116px, $right: 35px);
+        }
+
+        div:nth-of-type(2) {
+          @include image-position(96, 23.188, 129, 96, 3, $top: 24.615%, $right: 15px);
+        }
+
+        div:nth-of-type(3) {
+          @include image-position(154, 37.198, 202, 154, 3, $top: 45%, $left: 0, $transform: translateY(-50%));
+        }
+      }
+    }
   }
 
   .center {
@@ -77,49 +121,19 @@
     pointer-events: none;
   }
 
-  .marqueeWrapper {
-    width: 100%;
-    height: 100%;
-    overflow: hidden;
-    position: relative;
-  }
-
-  .marquee {
-    will-change: transform;
-    transform: translateZ(0);
-    backface-visibility: hidden;
-    -webkit-font-smoothing: antialiased;
-    -moz-osx-font-smoothing: grayscale;
-    display: flex;
-    flex-direction: column;
-    gap: 35px;
-    position: relative;
-
-    p {
-      font-family: var(--swiss-fonts);
-      font-size: 2.4rem;
-      font-weight: 500;
-      line-height: 1.4;
-      letter-spacing: 1px;
-      text-align: center;
-      text-rendering: optimizeLegibility;
-      transform: translateZ(0);
-    }
-  }
-
-  .marqueeContent {
-    display: flex;
-    flex-direction: column;
-  }
-
   .bottom {
     position: absolute;
     bottom: 32px;
     left: 40px;
-    z-index: 1;
+    z-index: 9;
 
     p {
       cursor: pointer;
+    }
+
+    @include maxW {
+      bottom: 18px;
+      left: 17px;
     }
   }
 }
