--- a/src/sections/Story/story.module.scss
+++ b/src/sections/Story/story.module.scss
@@ -14,6 +14,15 @@
     z-index: 1;
   }
 
+  @include minW {
+    .bottom {
+      a {
+        background: var(--orange-cl);
+        color: var(--white-cl);
+      }
+    }
+  }
+
   @include maxW {
     background-image: var(--bg-mobile);
 
