modify css svg intro width for sp

--- a/src/sections/Intro/intro.module.scss
+++ b/src/sections/Intro/intro.module.scss
@@ -46,8 +46,9 @@
 
       svg {
         display: block;
-        width: 71.014vw;
+        width: 61.014vw;
         height: auto;
+        margin-bottom: 15px;
       }
     }
   }
