--- a/src/layouts/DesktopLayout/desktop.module.scss
+++ b/src/layouts/DesktopLayout/desktop.module.scss
@@ -6,7 +6,7 @@
   section {
     position: relative;
     width: 100%;
-    height: 100vh;
+    height: var(--app-height);
     overflow: hidden;
   }
 }
