--- a/src/sections/Product/product.module.scss
+++ b/src/sections/Product/product.module.scss
@@ -103,6 +103,7 @@
     left: 50%;
     transform: translateX(-50%);
     z-index: 1;
+    white-space: nowrap;
 
     @include maxW {
       bottom: 18px;
